Random Walk subsurface appearance in OptiX does not match other engines #74939

Closed
opened 2020-03-19 21:37:28 +01:00 by Sam Green · 6 comments

System Information
Operating system: Windows 10 (1909)
Graphics card: Nvidia RTX 2060

Blender Version
Broken: Presumably all versions including OptiX (earliest tested: 2.82, latest tested: 2.83, 42012493a8, master, 2020-03-19)

Short description of error
Random Walk subsurface materials appear significantly less saturated with the OptiX Cycles engine compared to CUDA and CPU, however Christensen-Burley materials render as expected.

Exact steps for others to reproduce the error
Open attached blend file (or add Principled BSDF/Subsurface Scattering BSSRDF with Random Walk to any object). Render with CUDA/CPU, then with OptiX, and compare.

CUDA
CUDA-Subsurface.png
OptiX
Optix-Subsurface.png

SuzanneSkin.blend
system-info.txt

**System Information** Operating system: Windows 10 (1909) Graphics card: Nvidia RTX 2060 **Blender Version** Broken: Presumably all versions including OptiX (earliest tested: 2.82, latest tested: 2.83, 42012493a8e1, master, 2020-03-19) **Short description of error** Random Walk subsurface materials appear significantly less saturated with the OptiX Cycles engine compared to CUDA and CPU, however Christensen-Burley materials render as expected. **Exact steps for others to reproduce the error** Open attached blend file (or add Principled BSDF/Subsurface Scattering BSSRDF with Random Walk to any object). Render with CUDA/CPU, then with OptiX, and compare. *CUDA* ![CUDA-Subsurface.png](https://archive.blender.org/developer/F8416419/CUDA-Subsurface.png) *OptiX* ![Optix-Subsurface.png](https://archive.blender.org/developer/F8416421/Optix-Subsurface.png) [SuzanneSkin.blend](https://archive.blender.org/developer/F8416423/SuzanneSkin.blend) [system-info.txt](https://archive.blender.org/developer/F8416434/system-info.txt)
Author

Added subscriber: @SamGreen

Added subscriber: @SamGreen

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv

This issue was referenced by blender/cycles@3b1e70d0ac

This issue was referenced by blender/cycles@3b1e70d0ac5353e6b5946ac5dd5ad4603ec027d8

This issue was referenced by bd2b1a67a7

This issue was referenced by bd2b1a67a7b9444cc0dbabe0f46e5a512c3eb7e5

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Patrick Mours self-assigned this 2020-03-26 13:01:53 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74939
No description provided.