intern/cycles/kernel/geom/geom_motion_triangle_intersect.h
@@ -103,17 +103,21 @@ ccl_device_inline
                                  const Ray *ray,
                                  float3 verts[3])
 {
+#  ifdef __KERNEL_OPTIX__
+  /* isect->t is always in world space with OptiX. */
+  return motion_triangle_refine(kg, sd, isect, ray, verts);
+#  else
   float3 P = ray->P;
   float3 D = ray->D;
   float t = isect->t;
 
-#  ifdef __INTERSECTION_REFINE__
+#    ifdef __INTERSECTION_REFINE__
   if (isect->object != OBJECT_NONE) {
-#    ifdef __OBJECT_MOTION__
+#      ifdef __OBJECT_MOTION__
     Transform tfm = sd->ob_itfm;
-#    else
+#      else
     Transform tfm = object_fetch_transform(kg, isect->object, OBJECT_INVERSE_TRANSFORM);
-#    endif
+#      endif
 
     P = transform_point(&tfm, P);
     D = transform_direction(&tfm, D);
@@ -135,19 +139,20 @@ ccl_device_inline
   P = P + D * rt;
 
   if (isect->object != OBJECT_NONE) {
-#    ifdef __OBJECT_MOTION__
+#      ifdef __OBJECT_MOTION__
     Transform tfm = sd->ob_tfm;
-#    else
+#      else
     Transform tfm = object_fetch_transform(kg, isect->object, OBJECT_TRANSFORM);
-#    endif
+#      endif
 
     P = transform_point(&tfm, P);
   }
 
   return P;
-#  else  /* __INTERSECTION_REFINE__ */
+#    else  /* __INTERSECTION_REFINE__ */
   return P + D * t;
-#  endif /* __INTERSECTION_REFINE__ */
+#    endif /* __INTERSECTION_REFINE__ */
+#  endif
 }
 #endif /* __BVH_LOCAL__ */
 
